# inference-server

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: load_short_1778298354.csv
docs/: arch-backend.html  arch-cache.html  arch-scheduler.html  arch-server.html  arch.css  architecture.html
papers/: batchllm.md  elis.md  flashattention.md  loki.md  speculative-decoding.md  tokenweave.md  vllm-paged-attention.md
scripts/: baseline_benchmark.py  benchmark_vs_ollama.py  eviction_benchmark.py  fairness_benchmark.py  kv_pressure_benchmark.py  load_test.py  plot_load_test.py  test_batch_cache.py  test_scheduler.py
src/inference_server/: __init__.py  batcher.py  config.py  metrics.py  scheduler.py  scheduling_policy.py  server.py  simulator_prompts.py  tokenizer.py
src/inference_server/backends/: __init__.py  base.py  mlx_backend.py  mps.py  torch_backend.py
src/inference_server/kv_cache/: __init__.py  block.py  block_manager.py  cache_manager.py  dynamic_cache_adapter.py  eviction.py  hf_format.py  radix_tree.py
src/inference_server/static/: index.html
tests/: test_cache_manager.py  test_chunked_prefill.py  test_eviction.py  test_kv_cache.py  test_radix_tree.py  test_scheduling_policy.py  test_server.py  test_tokenizer.py
